--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<section class="container" id="contact" >
 		<form class="flip">
 			<div class="front">
-            <h2>𝒢ử𝒾 𝓉ớ𝒾 𝓃𝑔ườ𝒾 𝓉ớ 𝓎ê𝓊</h2>
+            <h2>Gửi #</h2>
 				<a id="flip2back" href="#">Flip</a>
 			</div>
 			<div id="content" class="back">
